--- a/experiments/experiment-three/public/views/index.html
+++ b/experiments/experiment-three/public/views/index.html
@@ -14,8 +14,8 @@
         <script src="jsPsych/plugins/jspsych-text.js"></script>
         <script src="jsPsych/plugins/jspsych-call-function.js"></script>
         <!-- Custom JsPysch Plugins -->
-        <script src="control/likert.js"></script>
-        <script src="control/survey-multi-choose.js"></script>
+        <script src="plugins/likert.js"></script>
+        <script src="plugins/survey-multi-choose.js"></script>
         <!-- Tools -->
         <script src="control/random-tools.js"></script>
         <!-- Constants and Literals -->
