Update quote css; implement conditional scales; refactor old code with functional style

--- a/experiments/survey-ten/public/css/jspsychClean.css
+++ b/experiments/survey-ten/public/css/jspsychClean.css
@@ -73,9 +73,10 @@ code {
 }
 
 blockquote {
-    padding: 0 1em;
-    color: #6a737d;
-    border-left: 0.25em solid #dfe2e5;
+    padding: 0 0 2em;
+    text-align: center;
+    /*color: #6a737d;*/
+    /*border-left: 0.25em solid #dfe2e5;*/
 }
 
 p {
