--- a/experiments/survey-ten/public/views/index.html
+++ b/experiments/survey-ten/public/views/index.html
@@ -18,6 +18,7 @@
         <script src="plugins/survey-multi-choose.js"></script>
         <!-- Tools -->
         <script src="control/random-tools.js"></script>
+        <script src="control/formatting.js"></script>
         <script src="control/parameters.js"></script>
         <script src="control/randomization.js"></script>
         <!-- Constants and Literals -->
