--- a/experiments/survey-ten/public/css/jspsychClean.css
+++ b/experiments/survey-ten/public/css/jspsychClean.css
@@ -38,7 +38,7 @@ h2 {
 
 h3 {
     font-size: 20px;
-    font-weight: 600;
+    font-weight: normal;
     text-align: center;
 }
 
@@ -75,6 +75,7 @@ code {
 blockquote {
     padding: 0 0 2em;
     text-align: center;
+    font-size: 18px;
     /*color: #6a737d;*/
     /*border-left: 0.25em solid #dfe2e5;*/
 }
