--- a/experiments/1-experiment-three-cogsci/public/views/index.html
+++ b/experiments/1-experiment-three-cogsci/public/views/index.html
@@ -18,9 +18,9 @@
         <script src="plugins/survey-multi-choose.js"></script>
         <!-- Tools -->
         <script src="control/random-tools.js"></script>
-        <!-- Constants and Literals -->
         <script src="control/questions.js"></script>
         <script src="control/literals.js"></script>
+        <script src="control/helpers.js"></script>
         <!-- Styling -->
         <link href="css/jspsychClean.css" rel="stylesheet" type="text/css"></link>
     </head>
